# multi-agent-newsroom

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  learnings.md  spec.md
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: RunHistory.jsx  StoryCard.jsx  StoryDetail.jsx  TagFilter.jsx
src/newsroom/: __init__.py  api.py  citations.py  cli.py  console.py  db.py  editor.py  llm.py  models.py  orchestrator.py  structured.py
src/newsroom/agents/: editorial.py  evaluation.py  output.py  research.py  verification.py  writing.py
tests/: test_api.py  test_citations.py  test_cli.py  test_console.py  test_db.py  test_llm.py  test_orchestrator.py  test_structured.py
