[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-newsroom"
version = "0.1.0"
description = "A multi-agent system for producing trustworthy news briefings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.30",
  "feedparser>=6",
  "httpx>=0.27",
  "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
newsroom = "newsroom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

